fix currency medium size cards content align

--- a/Services/Interfaces/web_interface/static/css/style.css
+++ b/Services/Interfaces/web_interface/static/css/style.css
@@ -97,6 +97,11 @@ body:before {
 .medium-size {
   max-width: 18rem;
   min-width: 12rem;
+  justify-content: space-between;
+  display: flex;
+}
+.medium-size .card-body {
+  flex: 0 0 auto;
 }
 .small-size {
   max-width: 18rem;
